css/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    font-family: "Inter", sans-serif;
    scroll-behavior: smooth;
}
html{
  overflow-x: hidden;
}

:root {
  --color-dark: #191A23;
  --color-dark-alt: #292A32;
  --color-light: #FFFFFF;
  --color-blue: #345678;
  --color-light-blue: #F2F6FF;
  --color-dark-blue: #1B2A41;
  --color-yellow: #F3CE56;
  --color-gray: #707070;
  
  --hover--blue: #5886B4;
  --hover--transparent: rgba(208, 208, 208, 0.3);

  --border: 1px solid var(--color-light);
  --border-radius: 10px;
  --border-radius-small: 16px;
  --border-radius-medium: 24px;
  --border-radius-large: 30px;

  --shadow: 0 5px 0 0 var(--color-dark);

  --font-family-base: 'Inter', sans-serif ;

  --container-width: 1240px;
  --container-padding-x: 20px;

  --button-height-base: 64px;
  --button-height-small: 48px;

  --transition-duration: .2s ease-in;

}
.is-sticky {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10000;
}
h1{
    font-family: "Inter Tight", sans-serif;
    font-weight: 500;
    font-size: clamp(49px, 7vw, 136px);
    margin: auto;
    text-align: center;
    color: var(--color-light);
    line-height: 90%;
    margin-top: 240px;
}

h1 svg {
  width: 1em;
  height: auto;
  vertical-align: middle;
}

h2{
    font-family: "Inter", sans-serif;
    font-weight: 500;
    font-size: clamp(57px, 5vw, 64px);
    margin: auto;
    text-align: center;
    color: var(--color-blue);
}

h3{
    font-size: 20px;
}

h4{
    font-family: "Inter", sans-serif;
    font-weight: 500;
    font-size: clamp(24px, 2.5vw, 32px);
}

a{
    color: inherit;
}

svg{
    transition: var(--transition-duration);
}

.header {
  position: relative;
  width: 100%;
  height: 900px;
  overflow: hidden;
}

.header__video {
  position: absolute;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  transform: translate(-50%, -50%);
  object-fit: cover;
  z-index: -1;
}

.logo{
    width: 57px;
    height: 67px;
    display: block;
    z-index: 1000;
}

.container {
  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
  margin-inline: auto;
  padding-inline: var(--container-padding-x);
}

.visually-hidden {
    position: absolute !important;
    width: 1px !important;
    height: 1px !important;
    margin: -1px !important;
    border: 0 !important;
    padding: 0 !important;
    white-space: nowrap !important;
    clip-path: inset(100%) !important;
    clip: rect(0 0 0 0) !important;
    overflow: hidden !important;
}

.nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-inline: var(--container-padding-x);
    background-color: var(--color-light);
    margin-top: var(--container-padding-x);
    border-radius: var(--border-radius-small);
    height: 90px;
    position: relative;
}

.nav__list{
    display: flex;
    align-items: center;
    gap: 24px;
}

.nav__container{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 900px;
}

.nav__container > a {
  display: inline-flex;
  align-items: center;  
  justify-content: center;
  border-radius: var(--border-radius);
  gap: 8px;             
  color: var(--color-light);
  height: var(--button-height-small);
  width: 240px;
  background-color: var(--color-dark-blue);
  transition: var(--transition-duration);
}

.nav__container > a:hover {
    background-color: var(--hover--blue);
}

.hero__description{
    font-family: 'Inter Tight';
    font-size: clamp(18px, 5vw, 38px);
    color: var(--color-light);
    margin: auto;
    margin-top: 16px;
    margin-bottom: 32px;
    text-align: center;
}

.bold{
    font-weight: 500;
}

/* Herosection */
.hero__actions{
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 24px;
}

.hero__button {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    border-radius: var(--border-radius-large);
    height: var(--button-height-base);
    width: clamp(327px, 80vw, 415px);
    position: relative;
    overflow: hidden;
    transition: color var(--transition-duration), background-color var(--transition-duration);
    font-weight: 500;
    z-index: 1;
}

.hero__button::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 0%;
    height: 100%;
    z-index: -1;
    transition: width 0.4s ease;
}

.hero__button svg {
    z-index: 1;
    transition: fill 0.4s ease;
}

.hero__button--primary {
    background-color: var(--color-light);
    color: var(--color-dark-blue);
}

.hero__button--primary::before {
    background-color: var(--color-blue);
}

.hero__button--primary:hover::before {
    width: 100%;
}

.hero__button--primary:hover {
    color: var(--color-light);
}

.hero__button--primary:hover svg {
    fill: var(--color-light);
}

.hero__button--secondary {
    background-color: transparent;
    border: 1px solid white;
    color: var(--color-light);
}

.hero__button--secondary::before {
    background-color: var(--hover--transparent);
}

.hero__button--secondary:hover::before {
    width: 100%;
}

.hero__button--secondary:hover {
    color: var(--color-light);
}

.hero__button--secondary:hover svg {
    fill: white;
}


/* End of herosection */


/* Burger-menu */
.burger-menu {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    color: #fff;
    z-index: 3;
    text-align: center;
    background-color: #060E1E;   
    transform: translateX(100%);
    transition: transform 0.3s ease-in-out;
    pointer-events: none;
}

.burger-menu.show {
    transform: translateX(0);
    pointer-events: auto;
}

.burger-menu ul {
    list-style: none;
    padding: 0;
    margin-top: 70px;
}

.burger-menu ul li {
    margin: 35px 0;
}

.burger-menu ul li a {
    color: black;
    font: 300 32px 'Montserrat';
}
/* ... */

